# financial_data

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  financial_data_setup.txt  make.bat
src/financial_data/: __init__.py  financial_data.ipynb
tests/: test_financial_data.py
