[tool.poetry]
name = "financial_data"
version = "0.1.0"
description = "Financial Data with Python: S&P 500 https://www.youtube.com/watch?v=K_JQlIDzBpY"
authors = ["Alfredo Ramirez"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
yfinance = "^0.1.70"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
